# oxgate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: e2e.yml.example
migrations/: 20260117104522_create_users.sql  20260117120000_create_password_reset_tokens.sql  20260117150000_create_user_2fa_secrets.sql  20260117200000_alter_users_password_nullable.sql  20260117200001_create_user_social_accounts.sql
oxgate-web/: .env.local.example  .gitignore  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts
oxgate-web/e2e/: README.md
oxgate-web/e2e/fixtures/: test-data.ts
oxgate-web/e2e/pages/: consent.page.ts  login.page.ts  logout.page.ts  password-reset.page.ts  register.page.ts  two-factor.page.ts
oxgate-web/e2e/tests/: consent.spec.ts  login.spec.ts  logout.spec.ts  password-reset.spec.ts  register.spec.ts  two-factor.spec.ts
oxgate-web/src/app/: layout.tsx  page.tsx
oxgate-web/src/app/consent/: page.tsx
oxgate-web/src/app/login/: page.tsx
oxgate-web/src/app/logout/: page.tsx
oxgate-web/src/app/password-reset/confirm/: page.tsx
oxgate-web/src/app/password-reset/request/: page.tsx
oxgate-web/src/app/register/: page.tsx
oxgate-web/src/app/settings/2fa/: page.tsx
oxgate-web/src/components/ui/: error-message.tsx
oxgate-web/src/lib/: api-client.ts  validations.ts
sample-client/: Dockerfile  README.md  package.json  server.ts  setup.ts
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/handlers/: consent.rs  health.rs  login.rs  logout.rs  mod.rs  oauth.rs  password_reset.rs  register.rs  two_factor.rs
src/models/: mod.rs  password_reset_token.rs  user.rs  user_2fa.rs  user_social_account.rs
src/repositories/: mod.rs  password_reset_token.rs  user.rs  user_2fa.rs  user_social_account.rs
src/services/: auth.rs  email.rs  hydra.rs  mod.rs  oauth.rs  password_reset.rs  totp.rs
